[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/entities/lasereffects/LaserEffects.tscn" type="PackedScene" id=1]
[ext_resource path="res://models/player/player.glb" type="PackedScene" id=2]
[ext_resource path="res://scenes/entities/player/Player.gd" type="Script" id=3]
[ext_resource path="res://scenes/entities/explosions/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/ammo-reloadboop.mp3" type="AudioStream" id=5]
[ext_resource path="res://sounds/ammo-beginreload.mp3" type="AudioStream" id=6]
[ext_resource path="res://scenes/entities/player/MouseControls.tscn" type="PackedScene" id=7]
[ext_resource path="res://sounds/laser-outofammo.mp3" type="AudioStream" id=8]
[ext_resource path="res://scenes/entities/lasers/LaserGun.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/entities/player/LaserController.gd" type="Script" id=10]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.906798, 0.0775551, 0.725836 )

[node name="Player" type="KinematicBody" groups=["entities", "players"]]
pause_mode = 1
axis_lock_motion_y = true
move_lock_y = true
script = ExtResource( 3 )
SCREEN_EDGE_MARGIN = 1.5
mouse_compensation_factor = Vector2( 2.2, 2.2 )

[node name="LaserController" type="Node" parent="."]
script = ExtResource( 10 )

[node name="MouseControls" parent="." instance=ExtResource( 7 )]
sensitivity = 1.5
use_sensitivity_from_settings = true
max_mouse_speed = 1500

[node name="ReloadStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="ReloadBoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="AmmoClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="RegenTimer" type="Timer" parent="."]
pause_mode = 1
wait_time = 0.5
autostart = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="LaserRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.0665642, -1.15009 )
enabled = true
cast_to = Vector3( 0, 50, 0 )
collide_with_areas = true

[node name="PlayerModel" parent="." instance=ExtResource( 2 )]

[node name="LaserGun" parent="PlayerModel" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.8 )
sender = NodePath("../..")
raycast = NodePath("../../LaserRayCast")
show_cannon = false
from_player = true

[node name="Explosion" parent="." instance=ExtResource( 4 )]

[node name="LaserEffects" parent="." instance=ExtResource( 1 )]
ship = NodePath("..")

[connection signal="timeout" from="RegenTimer" to="." method="_on_RegenTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="exploded" from="Explosion" to="." method="_on_Explosion_exploded"]
